<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.VersionFragment">



    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/app_name"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:text="@string/version"
        android:textSize="20dp"
        tools:ignore="UnknownId" />

    <android.widget.ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/appCompatTextView"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:orientation="horizontal">

        <android.widget.ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:backgroundTint="@color/gray"
            android:src="@drawable/copyright"
            android:layout_marginLeft="170dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textSize="20dp" />

    </LinearLayout>


</RelativeLayout>