<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/secondary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        app:strokeColor="@color/primary"
        android:layout_height="300dp"
        app:shapeAppearanceOverlay="@style/CustomCardShape"
        android:backgroundTint="@color/primary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="183dp"
            android:layout_height="194dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="65dp"
            android:src="@drawable/logo">
        </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginBottom="1dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold">
            </TextView>
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            android:background="@color/secondary"
            tools:context=".view.login.LoginActivity">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="271dp"
                android:layout_height="59dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/username"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="271dp"
                android:layout_height="59dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="220dp"
                android:layout_height="59dp"
                android:text="@string/sign_in"
                android:backgroundTint="@color/primary"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/not_sign_up"
                    android:textColor="@color/black"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/register_link"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/primary"
                    android:layout_gravity="center"
                    android:layout_marginLeft="4dp"
                    android:clickable="true"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>
