<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/secondary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.register.RegisterActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        app:strokeColor="@color/primary"
        android:layout_height="300dp"
        app:shapeAppearanceOverlay="@style/CustomCardShape"
        android:backgroundTint="@color/primary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="183dp"
                android:layout_height="194dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="65dp"
                android:src="@drawable/logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginBottom="1dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            android:background="@color/secondary"
            tools:context=".view.login.LoginActivity"
            tools:ignore="RedundantNamespace">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="55dp"
                android:hint="@string/name"
                android:layout_marginBottom="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="55dp"
                android:hint="@string/username"
                android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="55dp"
                android:hint="@string/password"
                android:layout_marginBottom="15dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/daftar_button"
                android:layout_width="220dp"
                android:layout_height="59dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/primary"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/already_sign_up"
                    android:textColor="@color/black"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/signin_link"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/primary"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:clickable="true"
                    android:focusable="true" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
